Fixing title align for 500 page in forum

--- a/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
@@ -412,3 +412,8 @@ body.view-in-course .container {
 .course-info .course-sidebar header::after {
   left: 0;
 }
+
+// Forum 500 page
+section.outside-app h1 {
+    text-align: center;
+}
